--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/names/new.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/names/new.html
@@ -18,7 +18,7 @@
    <div class="col-sm-8">
       <h4>&nbsp;</h4>
        <p>Download our Excel template to see how to properly prepare and input name entries. <br><br>
-       <a class="btn btn-sm btn-primary" href="{{baseUrl}}/name_entry_template.xlsx" download>Download Template (.xslx)</a>
+       <a class="btn btn-sm btn-primary" ng-href="{{baseUrl}}/name_entry_template.xlsx" download>Download Template (.xslx)</a>
                 </p>
    </div>
 </div>
