better interaction by deselecting selected after index/dexindex

--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -86,6 +86,7 @@
   <script src="bower_components/fastclick/lib/fastclick.js"></script>
   <script src="bower_components/switchery/dist/switchery.js"></script>
   <script src="bower_components/ng-switchery/src/ng-switchery.js"></script>
+  <script src="bower_components/underscore/underscore.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
