--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/names/lists.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/names/lists.html
@@ -23,7 +23,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Syllables</th>
-                    <th>Morphology</th>
+                    <th>Geolocation</th>
                     <th ng-show="isAdmin">Status</th>
                     <th>Submitted By</th>
                     <th>Date</th>
@@ -33,10 +33,10 @@
                 <tr ng-repeat="entry in namesList" on-last-repeat>
                     <td><input type="checkbox" value="{{$index}}" name="selected_name"> <a ui-sref="auth.names.edit_entries({entry:entry.name})">{{entry.name}}</a></td>
                     <td>{{entry.syllables}}</td>
-                    <td>{{entry.morphology}}</td>
+                    <td>{{entry.geoLocation.place}}</td>
                     <td ng-hide="!isAdmin"><a class="btn btn-xs" ng-class="entry.indexed ? 'btn-default' : 'btn-success'" ng-click="indexName(entry)">{{entry.indexed ? 'Remove Index' : 'Index'}}</a></td>
                     <td>{{entry.submittedBy}}</td>
-                    <td>{{entry.createdAt|date:'mediumDate'}}</td>
+                    <td>{{entry.createdAt|toDateString}}</td>
                 </tr>
                 <tr class="text-center" ng-show="!namesList.length">
                     <td colspan="5">
