--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="">
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
+  <link rel='stylesheet' href='bower_components/font-awesome/css/font-awesome.min.css' />
   <link rel='stylesheet' href='bower_components/bootstrap/dist/css/bootstrap.css' />
   <link rel='stylesheet' href='bower_components/textAngular/dist/textAngular.css' />
   <link rel='stylesheet' href='bower_components/selectize/dist/css/selectize.css' />
