--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/names/edit.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/names/edit.html
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-xs-3">
-        <a class="btn btn-sm btn-default" ui-sref="auth.names.edit_entries({entry:'Ade'})"> &lt; Prev. Name: <b>Ade</b></a>
+        <a ng-hide="!prev" class="btn btn-sm btn-info" ui-sref="auth.names.edit_entries({entry:prev.name})"> &lt; Prev.: <b>{{prev.name|capitalize}}</b></a>
     </div>
     <div class="col-xs-6">&nbsp;</div>
     <div class="col-xs-3">
-       <a class="btn btn-sm btn-default pull-right" ui-sref="auth.names.edit_entries({entry:'Yemi'})">Next Name: <b>Yemi</b> &gt; </a>
+       <a ng-hide="!next" class="btn btn-sm btn-info pull-right" ui-sref="auth.names.edit_entries({entry:next.name})">Next: <b>{{next.name|capitalize}}</b> &gt; </a>
     </div>
     <div class="col-xs-12" style="margin-top:20px;">
        <div class="heading_a"><span class="heading_text">Update Name Entry</span></div>
