multiple upgrades to admin backend

--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -9,7 +9,6 @@
   <link rel="shortcut icon" type="image/x-icon" href="">
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
-  <link rel='stylesheet' href='bower_components/font-awesome/css/font-awesome.min.css' />
   <link rel='stylesheet' href='bower_components/bootstrap/dist/css/bootstrap.css' />
   <link rel='stylesheet' href='bower_components/textAngular/dist/textAngular.css' />
   <link rel='stylesheet' href='bower_components/selectize/dist/css/selectize.css' />
@@ -75,8 +74,6 @@
   <script src="bower_components/microplugin/src/microplugin.js"></script>
   <script src="bower_components/selectize/dist/js/selectize.js"></script>
   <script src="bower_components/footable/js/footable.js"></script>
-  <script src="bower_components/footable/js/footable.paginate.js"></script>
-  <script src="bower_components/footable/js/footable.filter.js"></script>
   <script src="bower_components/autosize/dist/autosize.js"></script>
   <script src="bower_components/angular-breadcrumb/release/angular-breadcrumb.js"></script>
   <script src="bower_components/angular-retina/build/angular-retina.js"></script>
@@ -90,6 +87,7 @@
   <script src="bower_components/switchery/dist/switchery.js"></script>
   <script src="bower_components/ng-switchery/src/ng-switchery.js"></script>
   <script src="bower_components/underscore/underscore.js"></script>
+  <script src="bower_components/jquery-listnav/dist/js/jquery-listnav-2.4.0.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
