--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/names/search.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/names/search.html
@@ -1,13 +1,13 @@
 <div class="row">
-  <div class="col-sm-8 col-sm-offset-2">
+  <div class="col-sm-8 col-sm-offset-2" ng-controller="searchCtrl">
   	
   	<div class="heading_a"><span class="heading_text">Find Entry</span></div>
     
-    <form>
+    <form ng-submit="exec_search()">
         <div class="input-group sepH_b">
-            <input class="form-control input-lg" placeholder="Enter name" id="appendedInputButton" type="text" ng-model="search.entry">
+            <input class="form-control input-lg" placeholder="Enter name" id="appendedInputButton" type="text" ng-model="search.entry" typeahead="entry.name for entry in names | filter:$viewValue | limitTo:8">
             <span class="input-group-btn">
-                <button class="btn btn-success btn-lg" ng-disabled="!search.entry" ng-click="doSearch()"><i class="fa fa-search"></i> Search</button>
+                <button class="btn btn-success btn-lg" ng-disabled="!search.entry" ng-click="exec_search()"><i class="fa fa-search"></i> Search</button>
             </span>
         </div>
         <div class="checkbox">
@@ -20,11 +20,10 @@
         
   </div>
 
-  <div class="col-sm-8 col-sm-offset-2">
+  <!--div class="col-sm-8 col-sm-offset-2">
       <h4>Showing results for {{search.entry}}</h4>
 
       <p></p>
-  </div>
-
+  </div-->
 
 </div>
