--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/users/lists.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/users/lists.html
@@ -1,39 +1,30 @@
 <div class="row">
-    <div class="col-md-3">
-        <a class="btn btn-success btn-sm" ui-sref="auth.users.add_user">Add New User</a>
+    <div class="col-sm-7">
+        <a class="btn btn-info btn-sm" ui-sref="auth.users.add_user">Add New User</a>
     </div>
     <div class="col-md-3">
         <input id="textFilter" type="text" class="form-control input-sm">
         <span class="help-block">Filter</span>
     </div>
-    <div class="col-md-3">
-        <select class="form-control input-sm" ng-change="filterTable(userStatus)" ng-model="userStatus">
-            <option></option>
-            <option value="ROLE_BASIC">Volunteers</option>
-            <option value="ROLE_LEXICOGRAPHER">Lexicographers</option>
-            <option value="ROLE_ADMIN">Administrators</option>
-        </select>
-        <span class="help-block">Role</span>
-    </div>
-    <div class="col-md-3">
+    <div class="col-sm-2">
         <a class="btn btn-default btn-sm" ng-click="clearFilters()">Clear</a>
     </div>
 </div>
 <div class="row">
     <div class="col-md-12">
-        <table class="table table-yuk2 toggle-arrow-tiny" id="users_table" data-filter="#textFilter" data-page-size="5">
+        <table class="table table-yuk2 toggle-arrow-tiny" id="users_table" data-filter="#textFilter" data-page-size="10">
             <thead>
                 <tr>
                     <th data-toggle="true">Username</th>
                     <th>Email Address</th>
-                    <th data-hide="phone,tablet">Role</th>
-                    <th data-hide="phone,tablet" data-name="Date Created">Date Created</th>
+                    <th>Role</th>
+                    <th>Date Created</th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="user in userList">
+                <tr ng-repeat="user in usersList">
                     <td>{{user.username}}</td>
-                    <td><a ui-sref="auth.users.edit_user({ id: user.id })">{{user.email}}</a></td>
+                    <td><strong>{{user.email}}</strong></td>
                     <td>{{user.roles}}</td>
                     <td>{{user.createdAt|toDateString}}</td>
                 </tr>
